# pm

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
deploy/docker/: Dockerfile.bench  Dockerfile.exporter  Dockerfile.runner
deploy/helm/perfbench/: Chart.yaml  values.yaml
deploy/helm/perfbench/dashboards/: perfbench-cpu.json  perfbench-drilldown.json  (+2 more)
docs/: architecture.md  external-nad-vlan.md  host-tuning.md  kubernetes.md  methodology.md  metrics.md  runbook.md  scenarios.md  tools.md
scenarios/: baremetal-kernel-vs-onload.yaml  bonding-matrix.yaml  k8s-vs-baremetal.yaml  multicast-matrix.yaml
scripts/: run_tests.py
src/perfbench/: __init__.py  cli.py  errors.py  stats.py
src/perfbench/capture/: __init__.py  discover.py  envsnapshot.py  nodecheck.py  preflight.py  resolve.py
src/perfbench/config/: __init__.py  loader.py  schema.py
src/perfbench/export/: __init__.py  exporter.py  promtext.py  push.py
src/perfbench/report/: __init__.py  summary.py
src/perfbench/results/: __init__.py  models.py  store.py
src/perfbench/runner/: __init__.py  base.py  k8s.py  local.py  orchestrator.py  ssh.py
src/perfbench/tools/: __init__.py  base.py  cyclictest.py  eflatency.py  iperf3.py  netperf.py  sfnt_pingpong.py  sfnt_stream.py  sockperf.py  sysjitter.py
tests/: helpers.py  test_capture.py  test_cli.py  test_discover.py  test_executors.py  test_export.py  test_k8s.py  test_loader.py  test_models_store_stats.py  test_multicast.py  test_nodecheck.py  test_orchestrator.py  test_report.py  test_resolve.py  test_schema.py  test_tools.py
(+11 files in other folders)
