[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "perfbench"
version = "0.1.0"
description = "Network & CPU latency benchmark harness for low-latency trading platforms (Solarflare/Onload, bonding, bare metal vs Kubernetes)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PerfBench" }]
dependencies = [
    "PyYAML>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
ssh = ["paramiko>=3.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "paramiko>=3.0",
]

[project.scripts]
perfbench = "perfbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src/perfbench"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
